# task-scheduler

./: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/application/: lifespan.py
app/application/api/: entrypoint.py
app/application/tasks/: handlers.py  schemas.py
app/common/: enums.py  factory.py
app/domain/entities/: base.py  tasks.py
app/domain/events/: tasks.py
app/domain/sql/: models.py
app/infrastructure/repositories/: base.py  sqlalchemy_repository.py
app/infrastructure/uow/: base.py  sample.py  sqlalchemy_uow.py
app/services/: init.py
app/services/commands/: tasks.py
app/services/events/: base.py  manager.py  tasks.py
app/services/mediator/: base.py
app/settings/: conf.py
docker/: app.yaml  postgresql.yaml
